logs/Slang/generated/keywords/5.6.2--keyword_cover.sv.log
name: cover
description: The 'cover' keyword should be reserved
should_fail: 1
tags: 5.6.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_cover.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_cover.sv:8:8: error: expected declarator
    bit cover;
       ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_cover.sv:8:9: error: language feature not yet supported
    bit cover;
        ^~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_cover.sv:8:14: error: expected expression
    bit cover;
             ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_cover.sv:8:14: error: expected '('
    bit cover;
             ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generated/keywords/5.6.2--keyword_cover.sv:8:14: error: expected ')'
    bit cover;
             ^
